Added parallelTestCount to MTA.testsettings

--- a/Miruken.Tests/Miruken.Tests.csproj
+++ b/Miruken.Tests/Miruken.Tests.csproj
@@ -78,6 +78,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="MTA.runsettings" />
     <None Include="MTA.testsettings">
       <SubType>Designer</SubType>
     </None>
