--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Callback\Composition.cs" />
     <Compile Include="Callback\HandleMethod.cs" />
     <Compile Include="Callback\IHandler.cs" />
+    <Compile Include="Context\Contextual.cs" />
     <Compile Include="Infrastructure\MethodSignatureComparer.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="Callback\RejectedException.cs" />
