--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -63,7 +63,7 @@
     <Compile Include="Callback\IHandler.cs" />
     <Compile Include="Context\Contextual.cs" />
     <Compile Include="Infrastructure\MethodSignatureComparer.cs" />
-    <Compile Include="Protocol.cs" />
+    <Compile Include="Interceptor.cs" />
     <Compile Include="Callback\RejectedException.cs" />
     <Compile Include="Callback\Resolution.cs" />
     <Compile Include="Callback\ResolveMethod.cs" />
@@ -90,6 +90,7 @@
     <Compile Include="Infrastructure\TimeSpanExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs" />
+    <Compile Include="Protocol.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx" />
