--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Callback\Composition.cs" />
     <Compile Include="Callback\HandleMethod.cs" />
     <Compile Include="Callback\IHandler.cs" />
+    <Compile Include="Callback\Provider.cs" />
     <Compile Include="Context\Contextual.cs" />
     <Compile Include="Infrastructure\MethodSignatureComparer.cs" />
     <Compile Include="Interceptor.cs" />
