--- a/Miruken.Tests/Miruken.Tests.csproj
+++ b/Miruken.Tests/Miruken.Tests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Concurrency\LinqToPromisesTests.cs" />
     <Compile Include="Concurrency\PromiseTests.cs" />
     <Compile Include="Context\ContextTests.cs" />
+    <Compile Include="Context\ContextualTests.cs" />
     <Compile Include="Graph\TraversalTests.cs" />
     <Compile Include="Graph\TraversingTests.cs" />
     <Compile Include="Graph\TreeNode.cs" />
