--- a/NuGet.Config
+++ b/NuGet.Config
@@ -4,7 +4,7 @@
     <add key="disableSourceControlIntegration" value="true" />
   </solution>
   <packageSources>
-    <add key="miruken" value="http://104.210.33.94:11000/guestAuth/app/nuget/v1/FeedService.svc/" />
+    <add key="miruken" value="http://build.miruken.com/guestAuth/app/nuget/v1/FeedService.svc/" />
     <add key="nuget.org" value="https://www.nuget.org/api/v2/" />
     <add key="Microsoft and .NET" value="https://www.nuget.org/api/v2/curated-feeds/microsoftdotnet/" />
   </packageSources>
