--- a/Miruken.Tests/Miruken.Tests.csproj
+++ b/Miruken.Tests/Miruken.Tests.csproj
@@ -68,6 +68,8 @@
     <Compile Include="Concurrency\LinqToPromisesTests.cs" />
     <Compile Include="Concurrency\Promise.Task.Tests.cs" />
     <Compile Include="Concurrency\PromiseTests.cs" />
+    <Compile Include="Container\ContainerTests.cs" />
+    <Compile Include="Container\TestContainer.cs" />
     <Compile Include="Context\ContextTests.cs" />
     <Compile Include="Context\ContextualTests.cs" />
     <Compile Include="Graph\TraversalTests.cs" />
