--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -64,10 +64,12 @@
     <Compile Include="Callback\CompositeHandler.cs" />
     <Compile Include="Callback\Composition.cs" />
     <Compile Include="Callback\HandleMethod.cs" />
+    <Compile Include="Callback\HandlesAttribute.cs" />
     <Compile Include="Callback\ICallback.cs" />
     <Compile Include="Callback\ICallbackDispatch.cs" />
     <Compile Include="Callback\IHandler.cs" />
     <Compile Include="Callback\Provider.cs" />
+    <Compile Include="Callback\ProvidesAttribute.cs" />
     <Compile Include="Callback\ResolveMethod.cs" />
     <Compile Include="Concurrency\Promise.Task.cs" />
     <Compile Include="Context\Contextual.cs" />
