Added definition policies

--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -58,7 +58,18 @@
     <Compile Include="Callback\Handler.Traverse.cs" />
     <Compile Include="Callback\HandlerDecorator.cs" />
     <Compile Include="Callback\HandlerFilter.cs" />
-    <Compile Include="Callback\HandlerMetadata.cs" />
+    <Compile Include="Callback\Policy\ArgumentRule.cs" />
+    <Compile Include="Callback\Policy\CallbackArgument.cs" />
+    <Compile Include="Callback\Policy\CallbackTypeFilter.cs" />
+    <Compile Include="Callback\Policy\ComposerArgument.cs" />
+    <Compile Include="Callback\Policy\ContravariantPolicy.cs" />
+    <Compile Include="Callback\Policy\ExtractArgument.cs" />
+    <Compile Include="Callback\Policy\ICallbackFilter.cs" />
+    <Compile Include="Callback\Policy\MethodRule.cs" />
+    <Compile Include="Callback\Policy\Policy.cs" />
+    <Compile Include="Callback\DefinitionAttribute.cs" />
+    <Compile Include="Callback\Policy\HandlerDescriptor.cs" />
+    <Compile Include="Callback\Policy\HandlerMetadata.cs" />
     <Compile Include="Callback\CallbackOptions.cs" />
     <Compile Include="Callback\CascadeHandler.cs" />
     <Compile Include="Callback\CompositeHandler.cs" />
@@ -68,6 +79,8 @@
     <Compile Include="Callback\ICallback.cs" />
     <Compile Include="Callback\ICallbackDispatch.cs" />
     <Compile Include="Callback\IHandler.cs" />
+    <Compile Include="Callback\Policy\ReturnRule.cs" />
+    <Compile Include="Callback\Policy\TargetArgument.cs" />
     <Compile Include="Callback\Provider.cs" />
     <Compile Include="Callback\ProvidesAttribute.cs" />
     <Compile Include="Callback\ResolveMethod.cs" />
