--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -60,16 +60,21 @@
     <Compile Include="Callback\HandlerFilter.cs" />
     <Compile Include="Callback\Policy\ArgumentRule.cs" />
     <Compile Include="Callback\Policy\CallbackArgument.cs" />
-    <Compile Include="Callback\Policy\CallbackTypeFilter.cs" />
+    <Compile Include="Callback\Policy\ContravariantFilter.cs" />
     <Compile Include="Callback\Policy\ComposerArgument.cs" />
+    <Compile Include="Callback\Policy\CovariantMethod.cs" />
+    <Compile Include="Callback\Policy\ContravariantMethod.cs" />
     <Compile Include="Callback\Policy\ContravariantPolicy.cs" />
+    <Compile Include="Callback\Policy\CovariantFilter.cs" />
+    <Compile Include="Callback\Policy\CovariantPolicy.cs" />
     <Compile Include="Callback\Policy\ExtractArgument.cs" />
     <Compile Include="Callback\Policy\ICallbackFilter.cs" />
+    <Compile Include="Callback\Policy\MethodDefinition.cs" />
     <Compile Include="Callback\Policy\MethodRule.cs" />
     <Compile Include="Callback\Policy\Policy.cs" />
     <Compile Include="Callback\DefinitionAttribute.cs" />
-    <Compile Include="Callback\Policy\HandlerDescriptor.cs" />
-    <Compile Include="Callback\Policy\HandlerMetadata.cs" />
+    <Compile Include="Callback\HandlerDescriptor.cs" />
+    <Compile Include="Callback\HandlerMetadata.cs" />
     <Compile Include="Callback\CallbackOptions.cs" />
     <Compile Include="Callback\CascadeHandler.cs" />
     <Compile Include="Callback\CompositeHandler.cs" />
@@ -80,6 +85,8 @@
     <Compile Include="Callback\ICallbackDispatch.cs" />
     <Compile Include="Callback\IHandler.cs" />
     <Compile Include="Callback\Policy\ReturnRule.cs" />
+    <Compile Include="Callback\Policy\ReturnsKey.cs" />
+    <Compile Include="Callback\Policy\ReturnsBoolOrVoid.cs" />
     <Compile Include="Callback\Policy\TargetArgument.cs" />
     <Compile Include="Callback\Provider.cs" />
     <Compile Include="Callback\ProvidesAttribute.cs" />
