--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Callback\Policy\CovariantPolicy.cs" />
     <Compile Include="Callback\Policy\ExtractArgument.cs" />
     <Compile Include="Callback\Policy\ICallbackFilter.cs" />
+    <Compile Include="Callback\Policy\KeyEqualityFilter.cs" />
     <Compile Include="Callback\Policy\MethodDefinition.cs" />
     <Compile Include="Callback\Policy\MethodRule.cs" />
     <Compile Include="Callback\Policy\CallbackPolicy.cs" />
