--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -69,8 +69,8 @@
     <Compile Include="Callback\Policy\ExtractArgument.cs" />
     <Compile Include="Callback\Policy\CallbackFilterAttribute.cs" />
     <Compile Include="Callback\Policy\ICallbackFilter.cs" />
-    <Compile Include="Callback\Policy\KeyEqualityFilter.cs" />
-    <Compile Include="Callback\Policy\MethodDefinition.cs" />
+    <Compile Include="Callback\Policy\MethodDispatch.cs" />
+    <Compile Include="Callback\Policy\MethodBinding.cs" />
     <Compile Include="Callback\Policy\MethodRule.cs" />
     <Compile Include="Callback\Policy\CallbackPolicy.cs" />
     <Compile Include="Callback\DefinitionAttribute.cs" />
