--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -72,8 +72,7 @@
     <Compile Include="Callback\Policy\MethodRule.cs" />
     <Compile Include="Callback\Policy\CallbackPolicy.cs" />
     <Compile Include="Callback\DefinitionAttribute.cs" />
-    <Compile Include="Callback\HandlerDescriptor.cs" />
-    <Compile Include="Callback\HandlerMetadata.cs" />
+    <Compile Include="Callback\Policy\HandlerDescriptor.cs" />
     <Compile Include="Callback\CallbackOptions.cs" />
     <Compile Include="Callback\CascadeHandler.cs" />
     <Compile Include="Callback\CompositeHandler.cs" />
