Adding rule decorators

--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -82,10 +82,9 @@
     <Compile Include="Callback\ICallback.cs" />
     <Compile Include="Callback\ICallbackDispatch.cs" />
     <Compile Include="Callback\IHandler.cs" />
-    <Compile Include="Callback\Policy\OptionalArgument.cs" />
     <Compile Include="Callback\Policy\ReturnRule.cs" />
     <Compile Include="Callback\Policy\ReturnsKey.cs" />
-    <Compile Include="Callback\Policy\ReturnsType.cs" />
+    <Compile Include="Callback\Policy\Return.cs" />
     <Compile Include="Callback\Policy\TargetArgument.cs" />
     <Compile Include="Callback\Provider.cs" />
     <Compile Include="Callback\ProvidesAttribute.cs" />
