--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -64,8 +64,8 @@
     <Compile Include="Callback\Policy\ContravariantPolicy.cs" />
     <Compile Include="Callback\Policy\CovariantPolicy.cs" />
     <Compile Include="Callback\Policy\ExtractArgument.cs" />
-    <Compile Include="Callback\PipelineAttribute.cs" />
-    <Compile Include="Callback\IPieplineFilter.cs" />
+    <Compile Include="Callback\FilterAttribute.cs" />
+    <Compile Include="Callback\IFilter.cs" />
     <Compile Include="Callback\Policy\MethodDispatch.cs" />
     <Compile Include="Callback\Policy\MethodBinding.cs" />
     <Compile Include="Callback\Policy\MethodPipeline.cs" />
@@ -73,7 +73,7 @@
     <Compile Include="Callback\Policy\CallbackPolicy.cs" />
     <Compile Include="Callback\DefinitionAttribute.cs" />
     <Compile Include="Callback\Policy\HandlerDescriptor.cs" />
-    <Compile Include="Callback\CallbackOptions.cs" />
+    <Compile Include="Callback\Options.cs" />
     <Compile Include="Callback\CascadeHandler.cs" />
     <Compile Include="Callback\CompositeHandler.cs" />
     <Compile Include="Callback\Composition.cs" />
