--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -50,6 +50,8 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Callback\FilterExtensions.cs" />
+    <Compile Include="Callback\FilterOptions.cs" />
     <Compile Include="Callback\Handler.cs" />
     <Compile Include="Callback\Handler.HandleMethod.cs" />
     <Compile Include="Callback\Handler.Helpers.cs" />
