--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Mediator\INotification.cs" />
     <Compile Include="Mediator\IRequest.cs" />
     <Compile Include="Mediator\MediatesAttribute.cs" />
+    <Compile Include="Mediator\PipelineProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs" />
     <Compile Include="Protocol.cs" />
