--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -50,13 +50,14 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Callback\Handler.Request.cs" />
-    <Compile Include="Callback\Request.cs" />
+    <Compile Include="Callback\Handler.Command.cs" />
+    <Compile Include="Callback\IAsyncCallback.cs" />
+    <Compile Include="Callback\Command.cs" />
     <Compile Include="Callback\FilterExtensions.cs" />
     <Compile Include="Callback\FilterOptions.cs" />
     <Compile Include="Callback\Handler.Aspect.cs" />
     <Compile Include="Callback\Handler.cs" />
-    <Compile Include="Callback\Handler.HandleMethod.cs" />
+    <Compile Include="Callback\Handler.Protocol.cs" />
     <Compile Include="Callback\Handler.Helpers.cs" />
     <Compile Include="Callback\Handler.Resolve.cs" />
     <Compile Include="Callback\Handler.Semantics.cs" />
@@ -88,7 +89,7 @@
     <Compile Include="Callback\HandleMethod.cs" />
     <Compile Include="Callback\HandlesAttribute.cs" />
     <Compile Include="Callback\ICallback.cs" />
-    <Compile Include="Callback\ICallbackDispatch.cs" />
+    <Compile Include="Callback\IDispatchCallback.cs" />
     <Compile Include="Callback\IHandler.cs" />
     <Compile Include="Callback\Policy\ReturnAsync.cs" />
     <Compile Include="Callback\Policy\ReturnRule.cs" />
@@ -129,9 +130,10 @@
     <Compile Include="Infrastructure\TimeSpanExtensions.cs" />
     <Compile Include="Mediator\Handler.Mediator.cs" />
     <Compile Include="Mediator\INotification.cs" />
+    <Compile Include="Mediator\IPipelineBehavior.cs" />
     <Compile Include="Mediator\IRequest.cs" />
     <Compile Include="Mediator\MediatesAttribute.cs" />
-    <Compile Include="Mediator\PipelineProvider.cs" />
+    <Compile Include="Mediator\PipelineAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs" />
     <Compile Include="Protocol.cs" />
