--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Callback\Handler.Traverse.cs" />
     <Compile Include="Callback\HandlerDecorator.cs" />
     <Compile Include="Callback\HandlerFilter.cs" />
+    <Compile Include="Callback\IScopedCallback.cs" />
     <Compile Include="Callback\Policy\ArgumentRule.cs" />
     <Compile Include="Callback\Policy\CallbackArgument.cs" />
     <Compile Include="Callback\Policy\CallbackPolicyBuilder.cs" />
@@ -99,6 +100,8 @@
     <Compile Include="Callback\Provider.cs" />
     <Compile Include="Callback\ProvidesAttribute.cs" />
     <Compile Include="Callback\ResolveMethod.cs" />
+    <Compile Include="Callback\Handler.Scope.cs" />
+    <Compile Include="Callback\VarianceOptions.cs" />
     <Compile Include="Concurrency\Promise.Task.cs" />
     <Compile Include="Context\Contextual.cs" />
     <Compile Include="Context\ContextualHandler.cs" />
