--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Callback\Handler.Traverse.cs" />
     <Compile Include="Callback\HandlerDecorator.cs" />
     <Compile Include="Callback\HandlerFilter.cs" />
+    <Compile Include="Callback\IDecorator.cs" />
     <Compile Include="Callback\IScopedCallback.cs" />
     <Compile Include="Callback\Policy\ArgumentRule.cs" />
     <Compile Include="Callback\Policy\CallbackArgument.cs" />
@@ -131,12 +132,19 @@
     <Compile Include="Infrastructure\ExceptionEventArgs.cs" />
     <Compile Include="Infrastructure\RuntimeHelper.cs" />
     <Compile Include="Infrastructure\TimeSpanExtensions.cs" />
+    <Compile Include="Mediator\Cache\Cached.cs" />
+    <Compile Include="Mediator\Cache\CachedHandler.cs" />
+    <Compile Include="Mediator\Cache\CacheExtensions.cs" />
     <Compile Include="Mediator\Handler.Mediator.cs" />
     <Compile Include="Mediator\INotification.cs" />
     <Compile Include="Mediator\IPipelineBehavior.cs" />
     <Compile Include="Mediator\IRequest.cs" />
     <Compile Include="Mediator\MediatesAttribute.cs" />
+    <Compile Include="Mediator\Oneway.cs" />
+    <Compile Include="Mediator\OnewayHandler.cs" />
     <Compile Include="Mediator\PipelineAttribute.cs" />
+    <Compile Include="Mediator\Mediator.cs" />
+    <Compile Include="Mediator\RequestDecorator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs" />
     <Compile Include="Protocol.cs" />
