--- a/Miruken.Tests/Miruken.Tests.csproj
+++ b/Miruken.Tests/Miruken.Tests.csproj
@@ -79,6 +79,9 @@
     <Compile Include="Infrastructure\PropertyChangeExtensionsTests.cs" />
     <Compile Include="Mediator\Cache\CacheHandlerTests.cs" />
     <Compile Include="Mediator\GetStockQuote.cs" />
+    <Compile Include="Mediator\Schedule\ParallelTests.cs" />
+    <Compile Include="Mediator\Schedule\SequentialTests.cs" />
+    <Compile Include="Mediator\Schedule\ConcurrentTests.cs" />
     <Compile Include="Mediator\StockQuoteHandler.cs" />
     <Compile Include="Mediator\HandlerTests.Mediator.cs" />
     <Compile Include="Mediator\OnewayHandlerTests.cs" />
