--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -145,6 +145,11 @@
     <Compile Include="Mediator\PipelineAttribute.cs" />
     <Compile Include="Mediator\Mediator.cs" />
     <Compile Include="Mediator\RequestDecorator.cs" />
+    <Compile Include="Mediator\Schedule\Concurrent.cs" />
+    <Compile Include="Mediator\Schedule\Parallel.cs" />
+    <Compile Include="Mediator\Schedule\Scheduled.cs" />
+    <Compile Include="Mediator\Schedule\ScheduleHandler.cs" />
+    <Compile Include="Mediator\Schedule\Sequential.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs" />
     <Compile Include="Protocol.cs" />
