--- a/Miruken/Miruken.csproj
+++ b/Miruken/Miruken.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Callback\IDecorator.cs" />
     <Compile Include="Callback\IBoundCallback.cs" />
     <Compile Include="Callback\Policy\ArgumentRule.cs" />
+    <Compile Include="Callback\Policy\BindingArgument.cs" />
     <Compile Include="Callback\Policy\CallbackArgument.cs" />
     <Compile Include="Callback\Policy\CallbackPolicyBuilder.cs" />
     <Compile Include="Callback\Policy\ComposerArgument.cs" />
