--- a/Test/Miruken.Tests/Miruken.Tests.csproj
+++ b/Test/Miruken.Tests/Miruken.Tests.csproj
@@ -74,7 +74,7 @@
     <Compile Include="TestRunner.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Miruken\Miruken.csproj">
+    <ProjectReference Include="..\..\Source\Miruken\Miruken.csproj">
       <Project>{82C1E9DE-D611-47CE-A091-2BED66DF5AC6}</Project>
       <Name>Miruken</Name>
     </ProjectReference>
