--- a/Test/Miruken.Castle.Tests/Miruken.Castle.Tests.csproj
+++ b/Test/Miruken.Castle.Tests/Miruken.Castle.Tests.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F64C666E-3A12-4FD4-B4BC-DE7BBD0A52BB}</ProjectGuid>
+    <ProjectGuid>{BD01AE54-9AC5-48FB-BE2C-D782831029EB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Miruken.Tests</RootNamespace>
-    <AssemblyName>Miruken.Tests</AssemblyName>
+    <RootNamespace>Miruken.Castle.Tests</RootNamespace>
+    <AssemblyName>Miruken.Castle.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -16,6 +16,7 @@
     <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,8 +36,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Castle.Windsor, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Data" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <Choose>
@@ -54,32 +63,28 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Callback\HandlerTests.Command.cs" />
-    <Compile Include="Callback\ResolveMethodTests.cs" />
-    <Compile Include="Callback\HandleMethodTests.cs" />
-    <Compile Include="Callback\HandlerTests.cs" />
-    <Compile Include="Concurrency\CancellingPromiseTests.cs" />
-    <Compile Include="Concurrency\Promise.Task.Tests.cs" />
-    <Compile Include="Concurrency\PromiseTests.cs" />
-    <Compile Include="Container\ContainerTests.cs" />
-    <Compile Include="Container\TestContainer.cs" />
-    <Compile Include="Context\ContextTests.cs" />
-    <Compile Include="Context\ContextualTests.cs" />
-    <Compile Include="Graph\TraversalTests.cs" />
-    <Compile Include="Graph\TraversingTests.cs" />
-    <Compile Include="Graph\TreeNode.cs" />
-    <Compile Include="Infrastructure\PropertyChangeExtensionsTests.cs" />
+    <Compile Include="CompositeHandlerExtensionsTests.cs" />
+    <Compile Include="ConfigurationFactoryInstallerTests.cs" />
+    <Compile Include="ContextualLifestyleManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RuntimeHelperTests.cs" />
-    <Compile Include="TestRunner.cs" />
+    <Compile Include="WindsorHandlerTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Source\Miruken.Castle\Miruken.Castle.csproj">
+      <Project>{31b658c0-2a41-40bb-bd3a-4e87f37b986b}</Project>
+      <Name>Miruken.Castle</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Source\Miruken\Miruken.csproj">
-      <Project>{82C1E9DE-D611-47CE-A091-2BED66DF5AC6}</Project>
+      <Project>{82c1e9de-d611-47ce-a091-2bed66df5ac6}</Project>
       <Name>Miruken</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
