--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -64,7 +64,7 @@
     <Compile Include="Callback\Handler.Traverse.cs" />
     <Compile Include="Callback\HandlerDecorator.cs" />
     <Compile Include="Callback\HandlerFilter.cs" />
-    <Compile Include="Callback\IDecorator.cs" />
+    <Compile Include="Infrastructure\IDecorator.cs" />
     <Compile Include="Callback\Policy\ArgumentRule.cs" />
     <Compile Include="Callback\Policy\BindingArgument.cs" />
     <Compile Include="Callback\Policy\CallbackArgument.cs" />
