--- a/Source/Miruken.Castle/Miruken.Castle.nuspec
+++ b/Source/Miruken.Castle/Miruken.Castle.nuspec
@@ -6,8 +6,8 @@
     <title>Miruken Castle</title>
     <authors>cneuwirt</authors>
     <owners>cneuwirt</owners>
-    <licenseUrl>https://github.com/Miruken-DotNet/Miruken.Castle/blob/master/LICENSE</licenseUrl>
-    <projectUrl>https://github.com/Miruken-DotNet/Miruken.Castle</projectUrl>
+    <licenseUrl>https://github.com/Miruken-DotNet/Miruken/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/Miruken-DotNet/Miruken</projectUrl>
     <iconUrl>https://avatars0.githubusercontent.com/u/20844317</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Miruken Castle</description>
