--- a/Source/Miruken.Validate.Castle/Miruken.Validate.Castle.nuspec
+++ b/Source/Miruken.Validate.Castle/Miruken.Validate.Castle.nuspec
@@ -6,8 +6,8 @@
     <title>Miruken Validate</title>
     <authors>cneuwirt</authors>
     <owners>cneuwirt</owners>
-    <licenseUrl>https://github.com/Miruken-DotNet/Miruken.Mvc/blob/master/LICENSE</licenseUrl>
-    <projectUrl>https://github.com/Miruken-DotNet/Miruken.Mvc</projectUrl>
+    <licenseUrl>https://github.com/Miruken-DotNet/Miruken/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/Miruken-DotNet/Miruken</projectUrl>
     <iconUrl>https://avatars0.githubusercontent.com/u/20844317</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Miruken Validate</description>
