adding example tests back in

--- a/Doc/example/example.csproj
+++ b/Doc/example/example.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F73C6936-E41E-49C6-9E2B-C7A87DAF81D4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Examples</RootNamespace>
-    <AssemblyName>Examples</AssemblyName>
+    <RootNamespace>Example</RootNamespace>
+    <AssemblyName>Example</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
