--- a/Source/Miruken.Validate.Castle/Miruken.Validate.Castle.nuspec
+++ b/Source/Miruken.Validate.Castle/Miruken.Validate.Castle.nuspec
@@ -1,22 +1,23 @@
 ﻿<?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Miruken.Validate</id>
+    <id>Miruken.Validate.Castle</id>
     <version>$version$</version>
-    <title>Miruken Validate</title>
+    <title>Miruken Validate Castle</title>
     <authors>cneuwirt</authors>
     <owners>cneuwirt</owners>
     <licenseUrl>https://github.com/Miruken-DotNet/Miruken/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/Miruken-DotNet/Miruken</projectUrl>
     <iconUrl>https://avatars0.githubusercontent.com/u/20844317</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Miruken Validate</description>
+    <description>Miruken Validate Castle</description>
     <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
     <copyright>Copyright 2016</copyright>
-    <tags>Miruken miruken Validate validate</tags>
+    <tags>Miruken miruken Validate validate Castle castle</tags>
     <dependencies>
       <dependency id="Miruken" version="(1.0,)"/>
       <dependency id="Miruken.Castle" version="(1.0,)"/>
+      <dependency id="Miruken.Validate" version="(1.0,)"/>
       <dependency id="FluentValidation" version="(6.4,)"/>
     </dependencies>
   </metadata>
