--- a/Source/Miruken.Castle/Miruken.Castle.nuspec
+++ b/Source/Miruken.Castle/Miruken.Castle.nuspec
@@ -14,6 +14,8 @@
     <copyright>Copyright 2016</copyright>
     <tags>Miruken miruken Castle castle</tags>
     <dependencies>
+      <dependency id="Castle.Core" version="[3.3.3]"/>
+      <dependency id="Castle.Windsor" version="[3.3.0]"/>
       <dependency id="Miruken" version="(1.0,)"/>
     </dependencies>
   </metadata>
