--- a/Source/Miruken.Castle/Miruken.Castle.csproj
+++ b/Source/Miruken.Castle/Miruken.Castle.csproj
@@ -61,9 +61,9 @@
     <Compile Include="ContextualScopeAccessor.cs" />
     <Compile Include="ContravariantFilter.cs" />
     <Compile Include="DependencyResolution.cs" />
-    <Compile Include="Plugin.cs" />
-    <Compile Include="PluginInstaller.cs" />
-    <Compile Include="Plugins.cs" />
+    <Compile Include="FeatureAssembly.cs" />
+    <Compile Include="FeatureInstaller.cs" />
+    <Compile Include="Features.cs" />
     <Compile Include="Properties\GlobalAssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResolvingInstaller.cs" />
