--- a/Test/Miruken.Castle.Tests/Miruken.Castle.Tests.csproj
+++ b/Test/Miruken.Castle.Tests/Miruken.Castle.Tests.csproj
@@ -66,7 +66,7 @@
     <Compile Include="CompositeHandlerExtensionsTests.cs" />
     <Compile Include="ConfigurationFactoryInstallerTests.cs" />
     <Compile Include="ContextualLifestyleManagerTests.cs" />
-    <Compile Include="PluginsTests.cs" />
+    <Compile Include="FeaturesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WindsorHandlerTests.cs" />
   </ItemGroup>
